# websocket-cpp

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  dockerfile
docker/: CMakeLists.txt
react-1-1-grouping-ws/: package-lock.json  package.json
react-1-1-grouping-ws/public/: index.html  manifest.json
react-1-1-grouping-ws/src/: WebsocketManager.js
react-1-1-ws/: package-lock.json  package.json
react-1-1-ws/public/: index.html  manifest.json
react-1-1-ws/src/: App.js  WebsocketManager.js
react-1-n-grouping-ws/: package-lock.json  package.json
react-1-n-grouping-ws/public/: index.html  manifest.json
react-1-n-grouping-ws/src/: WebsocketManager.js
react-1-n-ws/: package-lock.json  package.json
react-1-n-ws/public/: index.html  manifest.json
react-1-n-ws/src/: WebsocketManager.js
src/: app.cpp
